# volume_approximation

./: CMakeLists.txt  README.md
R-proj/R/: RcppExports.R
R-proj/src/: rounding.cpp  sample_points.cpp  volume.cpp
examples/: CMakeLists.txt  boundary_test.cpp  har_acc.cpp  membership_test.cpp  vol.cpp
include/: ballintersectpolytope.h  polytopes.h  random_samplers.h  vol_rand.h
include/convex_bodies/: polytopes.h  vpolyintersectvpoly.h
include/samplers/: samplers.h
include/volume/: vars.h
python/: test.py  volesti_pybind11.cpp
python/experiments/: __init__.py  __main__.py  experiments.py  utils.py
python/lib/: compile  volesti_pybind11.cpp
test/: CMakeLists.txt  vol.cpp
