cmake_minimum_required(VERSION 2.8.4)
project(volesti)

include_directories (BEFORE ./external)
include_directories (BEFORE ./EXTERNAL/MINIMUM_ELLIPSOID)
include_directories (BEFORE ./external/LPsolve_src/run_headers)
include_directories (BEFORE ./external/boost)
include_directories (BEFORE ./include/generators)
include_directories (BEFORE ./include/cartesian_geom)
include_directories (BEFORE ./include/volume)
include_directories (BEFORE ./include)
include_directories (BEFORE ./include/convex_bodies)
include_directories (BEFORE ./include/annealing)
include_directories (BEFORE ./include/samplers)
include_directories (BEFORE ./python/lib)
include_directories (BEFORE /usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/include/python3.7m)
include_directories (BEFORE /Users/vangelisanagnostopoulos/projects/pointnet/env/include/site/python3.7)

add_definitions(-DUSE_FAISS -DUSE_BOUNDARY -DVOLESTI_DEBUG)
SET(GCC_COVERAGE_COMPILE_FLAGS "-O3 -Wall -shared -std=c++11 -fPIC -undefined dynamic_lookup")
SET(GCC_COVERAGE_LINK_FLAGS    "-lfaiss")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")

add_executable(volesti ./python/lib/volesti_pybind11.cpp)
set_target_properties(volesti PROPERTIES OUTPUT_NAME /Users/vangelisanagnostopoulos/projects/volume_approximation/python/lib/volesti.so)
